Bug 110032 - [CI][SHARDS] igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - all YUV formats fail after testing NV12 on plane 2
Summary: [CI][SHARDS] igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - all YUV f...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: high normal
Assignee: Ville Syrjala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-13 13:11 UTC by Martin Peres
Modified: 2019-03-20 11:45 UTC (History)
1 user (show)

See Also:
i915 platform: ICL
i915 features: display/Other


Attachments

Description Martin Peres 2019-03-13 13:11:53 UTC

    
Comment 1 Martin Peres 2019-03-13 13:16:20 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5736/shard-iclb3/igt@kms_plane@pixel-format-pipe-a-planes.html

Starting subtest: pixel-format-pipe-B-planes
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.2
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.3
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format NV12 (0x3231564e) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P010 (0x30313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P012 (0x32313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format P016 (0x36313050) on B.4
(kms_plane:3990) WARNING: CRC mismatch with format RG16 (0x36314752) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format XB24 (0x34324258) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format AR24 (0x34325241) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format AB24 (0x34324241) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format XR30 (0x30335258) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.5
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YUYV (0x56595559) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format YVYU (0x55595659) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format UYVY (0x59565955) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.6
(kms_plane:3990) WARNING: CRC mismatch with format VYUY (0x59555956) on B.6
(kms_plane:3990) CRITICAL: Test assertion failure function test_pixel_formats, file ../tests/kms_plane.c:587:
(kms_plane:3990) CRITICAL: Failed assertion: result
(kms_plane:3990) CRITICAL: At least one CRC mismatch happened
Comment 3 CI Bug Log 2019-03-14 07:43:15 UTC
A CI Bug Log filter associated to this bug has been updated:

{- ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12 (0x3231564e) on [ABC].2 -}
{+ ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12 (0x3231564e) on [ABC].2 +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5740/shard-iclb1/igt@kms_plane@pixel-format-pipe-a-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5741/shard-iclb1/igt@kms_plane@pixel-format-pipe-a-planes.html
Comment 4 CI Bug Log 2019-03-15 09:12:44 UTC
A CI Bug Log filter associated to this bug has been updated:

{- ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12 (0x3231564e) on [ABC].2 -}
{+ ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12 (0x3231564e) on [ABC].\d +}

New failures caught by the filter:

* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4885/shard-iclb3/igt@kms_plane@pixel-format-pipe-b-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4885/shard-iclb5/igt@kms_plane@pixel-format-pipe-b-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4885/shard-iclb8/igt@kms_plane@pixel-format-pipe-c-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4885/shard-iclb8/igt@kms_plane@pixel-format-pipe-c-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5746/shard-iclb2/igt@kms_plane@pixel-format-pipe-c-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5746/shard-iclb3/igt@kms_plane@pixel-format-pipe-c-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5746/shard-iclb8/igt@kms_plane@pixel-format-pipe-b-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5746/shard-iclb8/igt@kms_plane@pixel-format-pipe-b-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5747/shard-iclb2/igt@kms_plane@pixel-format-pipe-b-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5747/shard-iclb3/igt@kms_plane@pixel-format-pipe-c-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5747/shard-iclb4/igt@kms_plane@pixel-format-pipe-c-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5747/shard-iclb5/igt@kms_plane@pixel-format-pipe-b-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5748/shard-iclb2/igt@kms_plane@pixel-format-pipe-b-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5748/shard-iclb2/igt@kms_plane@pixel-format-pipe-b-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5748/shard-iclb6/igt@kms_plane@pixel-format-pipe-c-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5748/shard-iclb8/igt@kms_plane@pixel-format-pipe-c-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5749/shard-iclb2/igt@kms_plane@pixel-format-pipe-b-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5749/shard-iclb6/igt@kms_plane@pixel-format-pipe-c-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5749/shard-iclb8/igt@kms_plane@pixel-format-pipe-c-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4886/shard-iclb2/igt@kms_plane@pixel-format-pipe-c-planes.html
* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4886/shard-iclb4/igt@kms_plane@pixel-format-pipe-c-planes-source-clamping.html
* https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4886/shard-iclb8/igt@kms_plane@pixel-format-pipe-b-planes.html
Comment 5 CI Bug Log 2019-03-15 09:18:50 UTC
A CI Bug Log filter associated to this bug has been updated:

{- ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12 (0x3231564e) on [ABC].\d -}
{+ ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12(0x3231564e) on [ABC].[2-8] +}

 No new failures caught with the new filter
Comment 6 CI Bug Log 2019-03-15 11:11:49 UTC
A CI Bug Log filter associated to this bug has been updated:

{- ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12(0x3231564e) on [ABC].[2-8] -}
{+ ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12(0x3231564e) on [ABC].[2-8] +}

 No new failures caught with the new filter
Comment 7 CI Bug Log 2019-03-15 11:13:18 UTC
A CI Bug Log filter associated to this bug has been updated:

{- ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12(0x3231564e) on [ABC].[2-8] -}
{+ ICL: igt@kms_plane@pixel-format-pipe-[abc]-planes* - fail - WARNING: CRC mismatch with format NV12(0x3231564e) on [ABC].2 +}

 No new failures caught with the new filter
Comment 8 Jani Saarinen 2019-03-18 12:33:31 UTC
Fixes in https://patchwork.freedesktop.org/patch/292516/?series=58079&rev=1
Comment 9 Ville Syrjala 2019-03-18 15:50:05 UTC
commit 7c1200456cb0859fba27927feb8322929a4fad83 (HEAD -> drm-intel-next-queued, drm_intel_push/drm-intel-next-queued)
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Fri Mar 15 21:54:45 2019 +0200

    drm/i915: Turn off the CUS when turning off a HDR plane
Comment 10 Jani Saarinen 2019-03-18 16:21:43 UTC
Thanks,
Comment 11 CI Bug Log 2019-03-20 11:45:07 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.